--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     
 <body>
 
-    <nav>
+    <nav>  <!-- Navigation menu with links to different sections -->
         <a href="#home">Home</a>
         <a href="#about">About</a>
         <a href="#projects">Projects</a>
@@ -30,7 +30,7 @@
     <section id="projects">
         <h2>Projects</h2>
         <p>Check out some of my featured projects below:</p>
-        <ul>
+        <ul> <!-- Each project listed with a link and a short description -->
             <li><a href="#project1">Project 1</a> - Health and fitness tracking app.</li>
             <li><a href="#project2">Project 2</a> - Desisn a clotheline website for dev_apparel.</li>
             <li><a href="#project3">Project 3</a> - Built a UI for a queue management sytem.</li>
